# egi-notebooks-hub

./: .gitignore  .travis.yml  401.html  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  login.html  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dependabot.yml
.github/linters/: .isort.cfg  .jscpd.json
.github/workflows/: check-links.yml  dependabot.yml  docker.yml  hub-tests.yml  k3s-tests.yml  lint.yml  tests.yaml  tests.yml
ec-templates/: 401.html  403.html  accept-share.html  admin.html  egi-login.html  error.html  home.html  login.html  logout.html  not_running.html  oauth.html  page.html  spawn.html  spawn_pending.html  stop_pending.html  token.html  welcome.html
egi_notebooks_hub/: __init__.py  b2drop.py  d4science.py  datahub.py  egiauthenticator.py  egispawner.py  onedata.py  welcome.py
egi_notebooks_hub/services/: api_wrapper.py  d4science_spawn.py  share_manager.py  token_acquirer.py
egi_notebooks_hub/templates/: b2drop-form.html  b2drop-style.css
static/css/: ecl-ec-default-print.css  ecl-ec-default.css  ecl-ec-print.css  ecl-ec-utilities.css  ecl-ec.css  ecl-reset.css  ecl-rtl.css  egi.css
static/js/: ecl-ec.js
templates/: 401.html  403.html  accept-share.html  egi-login.html  login.html  logout.html  page.html  token.html  welcome.html
tests/: README.md  conftest.py  readme.txt  run_tests.py  test_api_wrapper.py  test_egiauthenticator.py  test_egispawner_unit.py  test_share_manager.py
tests/phase1extended/: conftest.py  (+2 more)
(+23 files in other folders)
