[metadata]
name = egi_notebooks_hub 
summary = JupyterHub extensions for EGI Notebooks
description-file = 
	README.md
author = Enol Fernandez 
author-email = enol.fernandez@egi.eu
home-page = 
license = MIT 
classifier = 
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[files]
packages = egi_notebooks_hub

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[entry_points]
jupyterhub.authenticators =
    egiauthenticator = egi_notebooks_hub.egiauthenticator:EGICheckinAuthenticator
    eoscauthenticator = egi_notebooks_hub.egiauthenticator:EOSCNodeAuthenticator
    d4scienceauthenticator = egi_notebooks_hub.d4science:D4ScienceOauthenticator
    onedataauthenticator = egi_notebooks_hub.onedata:OnedataAuthenticator
jupyterhub.spawners =
    egispawner = egi_notebooks_hub.egispawner:EGISpawner
    d4sciencespawner = egi_notebooks_hub.d4science:D4ScienceSpawner
    onedataspawner = egi_notebooks_hub.onedata:OnedataSpawner
